--- a/movies.html
+++ b/movies.html
@@ -32,7 +32,14 @@
 
   <script>
     // Your web app's Firebase configuration
-    var firebaseConfig = {}
+    var firebaseConfig = {
+    apiKey: "AIzaSyA-dBClGlkRqvpAmkcp8jN2qbToXFXF4R0",
+    authDomain: "kiei-451-8c621.firebaseapp.com",
+    projectId: "kiei-451-8c621",
+    storageBucket: "kiei-451-8c621.appspot.com",
+    messagingSenderId: "1091024215281",
+    appId: "1:1091024215281:web:1cc9b46226dfc2cede5d50"
+  };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
